--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <body>
     <header>
         <h1>InterGDance: Prior-guided Music-driven Interactable Group Choreography <br> 
-            in a Number-Free Paradigm Trajectory-Controllable Diffusion</h1>
+            in a Number-Free Paradigm </h1>
         <br>
         <div id="author-list">
             <a>Anonymous submission</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
