--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<title>TCDiff</title>
+  	<title>InterGDance</title>
     <style>
         body {
             background-color:#ffffff;
@@ -296,16 +296,7 @@
 
     <section>
         <h2>Abstract</h2>
-        <p>Creating group choreography from music has gained attention in cultural entertainment and virtual reality, aiming to coordinate visually cohesive and diverse group movements.
-            Despite increasing interest, recent works face challenges in achieving aesthetically appealing choreography, primarily for two key issues: <strong>multi-dancer collision</strong> 
-            and <strong>single-dancer foot slide</strong>. To address these issues, we propose a Trajectory-Controllable Diffusion (TCDiff), 
-            a novel approach that harnesses non-overlapping trajectories to facilitate coherent dance movements. 
-            Specifically, to tackle dancer collisions, we introduce a Dance-Beat Navigator capable of generating trajectories for multiple dancers based on the music, 
-            complemented by a Distance-Consistency loss to maintain appropriate spacing among trajectories within a reasonable threshold. 
-            To mitigate foot sliding, we present a Footwork Adaptor that utilizes trajectory displacement from adjacent frames to enable flexible footwork, 
-            coupled with a Relative Forward-Kinematic loss to adjust the positioning of individual dancers' root nodes and joints.
-            Extensive experiments demonstrate that our method achieves state-of-the-art results. 
-            Music-driven group dance choreography has garnered attention in both cultural entertainment and academia. 
+        <p> Music-driven group dance choreography has garnered attention in both cultural entertainment and academia. 
             Recent works mainly confront two crucial shortcomings, on the one hand, they <strong>lack interaction annotations</strong>, therefore can not learn a more diverse and immersive user experience; on the other hand, most existing methods can not achieve \textbf{number-free generation}, which means they can not generate group dance with a various number of dancers. 
             To address these issues, we present <strong>InterGDance</strong>, a framework that integrates interaction priors for motion control and enables number-free generation.
             Our main motivation is employing human priors to efficiently guide the interaction and expansion of dancers.
@@ -326,21 +317,28 @@
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\2.mp4" type="video/mp4">
+                            <source src="resource\2\23_5OOEKa0li0A_02_0_1890_slice60.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g2g418.mp4" type="video/mp4">
+                            <source src="resource\2\24_BpPv3uUld24_01_0_1200_slice53.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g2g95.mp4" type="video/mp4">
+                            <source src="resource\2\25_9GgtL-BL-GE_03_691_1710_slice4.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="2" data-cloned="true">
+                    <div class="video">
+                        <video autoplay loop muted controls>
+                            <source src="resource\2\_15_0oOe8Qjieps_02_0_1290_slice71.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -368,14 +366,21 @@
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g3g40.mp4" type="video/mp4">
+                            <source src="resource\3\24_JxONoMvqUpQ_05_0_1494_slice22.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g3g328j.mp4" type="video/mp4">
+                            <source src="resource\3\_16_lhgto3xo2c8_04_0_1260_slice29.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="1" data-cloned="true">
+                    <div class="video">
+                        <video autoplay loop muted controls>
+                            <source src="resource\3\_1_5k-J9PavRI0_03_0_1860_slice111.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
