--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             in a Number-Free Paradigm </h1>
         <br>
         <div id="author-list">
-            <a>Anonymous submission</a><sup>1</sup>&nbsp;&nbsp;&nbsp;
+            <a>Anonymous submission</a>&nbsp;&nbsp;&nbsp;
          
         </div>
     </header>
@@ -335,7 +335,7 @@
                         </video>
                     </div>
                 </div>
-                <div class="slider-item" data-slider-index="2" data-cloned="true">
+                <div class="slider-item" data-slider-index="3" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
                             <source src="resource\2\_15_0oOe8Qjieps_02_0_1290_slice71.mp4" type="video/mp4">
@@ -357,6 +357,7 @@
                 <div class="slider-page" data-index="0"></div>
                 <div class="slider-page" data-index="1"></div>
                 <div class="slider-page" data-index="2"></div>
+                <div class="slider-page" data-index="3"></div>
             </div>
         </div>
 
@@ -377,7 +378,7 @@
                         </video>
                     </div>
                 </div>
-                <div class="slider-item" data-slider-index="1" data-cloned="true">
+                <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
                             <source src="resource\3\_1_5k-J9PavRI0_03_0_1860_slice111.mp4" type="video/mp4">
@@ -398,6 +399,7 @@
             <div class="slider-pagination">
                 <div class="slider-page" data-index="0"></div>
                 <div class="slider-page" data-index="1"></div>
+                <div class="slider-page" data-index="2"></div>
             </div>
         </div>
 
