--- a/index.html
+++ b/index.html
@@ -409,28 +409,21 @@
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\4.mp4" type="video/mp4">
+                            <source src="resource\4\2_0oOe8Qjieps_02_0_1290_slice69_1.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g4g10.mp4" type="video/mp4">
+                            <source src="resource\4\7_8QvKh-jvI1I_09_0_1290_slice19.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g4i324.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-                <div class="slider-item" data-slider-index="3" data-cloned="true">
-                    <div class="video">
-                        <video autoplay loop muted controls>
-                            <source src="resources\generate\g4g13.mp4" type="video/mp4">
+                            <source src="resource\4\_10_2YMv8SB0pXY_03_0_950_slice43.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -449,7 +442,6 @@
                 <div class="slider-page" data-index="0"></div>
                 <div class="slider-page" data-index="1"></div>
                 <div class="slider-page" data-index="2"></div>
-                <div class="slider-page" data-index="3"></div>
             </div>
         </div>
 
@@ -459,28 +451,21 @@
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g5g115.mp4" type="video/mp4">
+                            <source src="resource\5\3_CQhwdeOcwMI_03_0_606_slice25.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g5g312.mp4" type="video/mp4">
+                            <source src="resource\5\_20_KNqdxdAOLo0_03_0_1770_slice1_1.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">                       
                     <div class="video">
                         <video autoplay loop muted controls>
-                            <source src="resources\generate\g5g414.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-                <div class="slider-item" data-slider-index="3" data-cloned="true">
-                    <div class="video">
-                        <video autoplay loop muted controls>
-                            <source src="resources\generate\g5g96.mp4" type="video/mp4">
+                            <source src="resource\5\_26_uitvYa5NsJI_18_0_1950_slice8.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -499,38 +484,58 @@
                 <div class="slider-page" data-index="0"></div>
                 <div class="slider-page" data-index="1"></div>
                 <div class="slider-page" data-index="2"></div>
-                <div class="slider-page" data-index="3"></div>
             </div>
         </div>
     </section>
 
-    <section>
-        <br>
-        <h2>Controllability</h2>
-        <br>
-        <div class="video-container" style="text-align: center;">
-            <div class="video" style="width: 40%; margin: 0 auto;">
-                <video autoplay loop muted controls>
-                    <source src="resources\controllability\c3g1814.mp4" type="video/mp4">
-                </video>
-            </div>   
-        </div>
-        <br>
-        <h2 style="font-size: 25;">Position Control Result</h2>
-        <br>
-        <div class="image-container">
-            <img src="resources/Formation_control.jpg" alt="Image 2">
-            <p>
-                Our model leverages user-provided dancer positions to facilitate position swaps, 
-                yielding sensible and manageable outcomes while also generating corresponding footwork movements—a capability beyond the existing models.
-            </p>
+    <h4><span style="color: rgb(84, 84, 247);">Infinite</span>-Dancers</h4>
+        <div class="video-container">
+            <div class="slider-container">
+                <div class="slider-item" data-slider-index="0" data-cloned="true">
+                    <div class="video">
+                        <video autoplay loop muted controls>
+                            <source src="resource\infinit\1_5Y5L3FXkHVM_02_0_1290_slice35.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="1" data-cloned="true">
+                    <div class="video">
+                        <video autoplay loop muted controls>
+                            <source src="resource\infinit\25_2R8f-0RErCI_03_434_1230_slice16.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="2" data-cloned="true">                       
+                    <div class="video">
+                        <video autoplay loop muted controls>
+                            <source src="resource\infinit\7_Gb-y_rl1b4k_02_706_1200_slice11.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-navigation-previous">
+                <svg viewBox="0 0 50 80" xml:space="preserve">
+                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
+                </svg>
+            </div>
+            <div class="slider-navigation-next">
+                <svg viewBox="0 0 50 80" xml:space="preserve">
+                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
+                </svg>
+            </div>
+            <div class="slider-pagination">
+                <div class="slider-page" data-index="0"></div>
+                <div class="slider-page" data-index="1"></div>
+                <div class="slider-page" data-index="2"></div>
+            </div>
         </div>
     </section>
-    
+
+
     <section>
         <h2>Framework</h2>
         <div class="image-container">
-            <img src="resources/pipline.png" alt="Image 2">
+            <img src="pipline.png" alt="Image 2">
             <p>
                 Overview of our InterGDance pipeline. Initially, our rule-based classification method splits the dataset by interaction patterns and assigns corresponding labels. Subsequently, InterGDance uses these labels for controllable interaction generation. 
             <p>
