--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <section>
         <h2>Abstract</h2>
         <p> Music-driven group dance choreography has garnered attention in both cultural entertainment and academia. 
-            Recent works mainly confront two crucial shortcomings, on the one hand, they <strong>lack interaction annotations</strong>, therefore can not learn a more diverse and immersive user experience; on the other hand, most existing methods can not achieve \textbf{number-free generation}, which means they can not generate group dance with a various number of dancers. 
+            Recent works mainly confront two crucial shortcomings, on the one hand, they <strong>lack interaction annotations</strong>, therefore can not learn a more diverse and immersive user experience; on the other hand, most existing methods can not achieve <strong>number-free generation</strong>, which means they can not generate group dance with a various number of dancers. 
             To address these issues, we present <strong>InterGDance</strong>, a framework that integrates interaction priors for motion control and enables number-free generation.
             Our main motivation is employing human priors to efficiently guide the interaction and expansion of dancers.
             Specifically, to overcome the lack of interaction annotations, 
