--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="video-container" style="text-align: center;">
             <div class="video" style="width: 60%; margin: 0 auto;">
                 <video autoplay loop muted controls>
-                    <source src="resource\InterGDance_introDemo.mp4" type="video/mp4">
+                    <source src="resource\InterGDance_intro.mp4" type="video/mp4">
                 </video>
             </div>   
         </div>
