--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="video-container" style="text-align: center;">
             <div class="video" style="width: 60%; margin: 0 auto;">
                 <video autoplay loop muted controls>
-                    <source src="resource\InterGDance_intro.mp4" type="video/mp4">
+                    <source src="resource\freecompress-InterGDance.mp4" type="video/mp4">
                 </video>
             </div>   
         </div>
@@ -315,6 +315,7 @@
         <div class="video-container">
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
+                    <p><b> Lable = "Similar" </b></p><br>
                     <div class="video">
                         <video autoplay loop muted controls>
                             <source src="resource\2\23_5OOEKa0li0A_02_0_1890_slice60.mp4" type="video/mp4">
