--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             line-height: 1.5;
         }
     
-        .video-container {
+        /* .video-container {
             box-sizing: border-box; 
             margin: 0 auto; 
             position: relative; 
@@ -118,6 +118,12 @@
             padding: 0 0; 
             overflow: hidden; 
             display: flex;
+        } */
+         /* 修改视频的样式 */
+        .video-container video {
+            width: 100%;  
+            height: auto; /* 保持宽高比 */
+            border-radius: 10px; 
         }
 
         .video-container video {
@@ -136,16 +142,19 @@
             margin: 0 auto; 
         }
 
+        /* 修改 .slider-container 样式来调整视频排布 */
         .slider-container {
             display: flex; 
-            transition: all 300ms ease 0s; 
-            gap: 10px;
+            gap: 10px; /* 控制视频之间的间距 */
+            overflow-x: hidden; /* 去除滚动条 */
+            justify-content: center; /* 居中排列视频 */
         }
 
+        /* 修改 .slider-item 样式来控制视频的宽度 */
         .slider-item {
-            flex: 0 0 auto; 
-            width: calc(50% - 5px); 
-            scroll-snap-align: start; 
+            position: relative; /* 确保子元素可以绝对定位 */
+            width: 30%; /* 固定每个视频容器的宽度 */
+            box-sizing: border-box; /* 确保宽度计算包括内边距和边框 */
         }
 
         .slider-navigation-previous,
@@ -239,6 +248,25 @@
             }
         }
 
+        /* 样式用于视频上方的文字 */
+        .video-caption {
+            font-size: 12px; /* 小字大小 */
+            color: #666; /* 设置文字颜色 */
+            position: absolute; /* 绝对定位文字 */
+            top: -20px; /* 调整文字距离视频的距离 */
+            left: 50%; /* 水平居中 */
+            transform: translateX(-50%); /* 水平居中对齐 */
+            white-space: nowrap; /* 防止文字换行 */
+            font-family: Arial, sans-serif; /* 设置字体 */
+            z-index: 10; /* 确保文字显示在前面 */
+        }
+
+        /* FIXME: 文字调整部分 */
+        /* 负值让文字向左移动，调整数值达到理想效果 */
+        .left-adjust {
+            margin-left: 350px; /* 负值让文字向左移动，调整数值达到理想效果 */
+        }   
+
     </style>
     <style type="text/css">
         .cubox-extension-helper-button {
@@ -314,16 +342,17 @@
         <h4><span style="color: rgb(84, 84, 247);">2</span>-Dancers</span></h4>
         <div class="video-container">
             <div class="slider-container">
-                <div class="slider-item" data-slider-index="0" data-cloned="true">
-                    <p><b> Lable = "Similar" </b></p><br>
+                <!-- <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
                         <video autoplay loop muted controls>
                             <source src="resource\2\23_5OOEKa0li0A_02_0_1890_slice60.mp4" type="video/mp4">
                         </video>
                     </div>
-                </div>
+                </div> -->
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
+                        <!-- <p>"Unsimilar"</p> -->
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\24_BpPv3uUld24_01_0_1200_slice53.mp4" type="video/mp4">
                         </video>
@@ -331,6 +360,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\25_9GgtL-BL-GE_03_691_1710_slice4.mp4" type="video/mp4">
                         </video>
@@ -338,28 +368,14 @@
                 </div>
                 <div class="slider-item" data-slider-index="3" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\15_0oOe8Qjieps_02_0_1290_slice71.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-            <div class="slider-navigation-previous">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-navigation-next">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-pagination">
-                <div class="slider-page" data-index="0"></div>
-                <div class="slider-page" data-index="1"></div>
-                <div class="slider-page" data-index="2"></div>
-                <div class="slider-page" data-index="3"></div>
-            </div>
+
         </div>
 
         <h4><span style="color: rgb(84, 84, 247);">3</span>-Dancers</h4>
@@ -367,6 +383,7 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\24_JxONoMvqUpQ_05_0_1494_slice22.mp4" type="video/mp4">
                         </video>
@@ -374,6 +391,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\16_lhgto3xo2c8_04_0_1260_slice29.mp4" type="video/mp4">
                         </video>
@@ -381,27 +399,14 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\1_5k-J9PavRI0_03_0_1860_slice111.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-            <div class="slider-navigation-previous">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-navigation-next">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-pagination">
-                <div class="slider-page" data-index="0"></div>
-                <div class="slider-page" data-index="1"></div>
-                <div class="slider-page" data-index="2"></div>
-            </div>
+
         </div>
 
         <h4><span style="color: rgb(84, 84, 247);">4</span>-Dancers</h4>
@@ -409,6 +414,7 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\2_0oOe8Qjieps_02_0_1290_slice69_1.mp4" type="video/mp4">
                         </video>
@@ -416,6 +422,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\7_8QvKh-jvI1I_09_0_1290_slice19.mp4" type="video/mp4">
                         </video>
@@ -423,27 +430,14 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\10_2YMv8SB0pXY_03_0_950_slice43.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-            <div class="slider-navigation-previous">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-navigation-next">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-pagination">
-                <div class="slider-page" data-index="0"></div>
-                <div class="slider-page" data-index="1"></div>
-                <div class="slider-page" data-index="2"></div>
-            </div>
+   
         </div>
 
         <h4><span style="color: rgb(84, 84, 247);">5</span>-Dancers</h4>
@@ -451,6 +445,7 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\3_CQhwdeOcwMI_03_0_606_slice25.mp4" type="video/mp4">
                         </video>
@@ -458,6 +453,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\20_KNqdxdAOLo0_03_0_1770_slice1_1.mp4" type="video/mp4">
                         </video>
@@ -465,27 +461,14 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">                       
                     <div class="video">
+                        <p class="left-adjust">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\26_uitvYa5NsJI_18_0_1950_slice8.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-            <div class="slider-navigation-previous">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-navigation-next">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-pagination">
-                <div class="slider-page" data-index="0"></div>
-                <div class="slider-page" data-index="1"></div>
-                <div class="slider-page" data-index="2"></div>
-            </div>
+
         </div>
     </section>
 
@@ -494,6 +477,7 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\1_5Y5L3FXkHVM_02_0_1290_slice35.mp4" type="video/mp4">
                         </video>
@@ -501,6 +485,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
+                        <p class="left-adjust">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\25_2R8f-0RErCI_03_434_1230_slice16.mp4" type="video/mp4">
                         </video>
@@ -508,27 +493,14 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">                       
                     <div class="video">
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\7_Gb-y_rl1b4k_02_706_1200_slice11.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-            <div class="slider-navigation-previous">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-navigation-next">
-                <svg viewBox="0 0 50 80" xml:space="preserve">
-                    <polyline stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-                </svg>
-            </div>
-            <div class="slider-pagination">
-                <div class="slider-page" data-index="0"></div>
-                <div class="slider-page" data-index="1"></div>
-                <div class="slider-page" data-index="2"></div>
-            </div>
+
         </div>
     </section>
 
