--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <p class="left-adjust">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\25_2R8f-0RErCI_03_434_1230_slice16.mp4" type="video/mp4">
                         </video>
