--- a/index.html
+++ b/index.html
@@ -110,15 +110,6 @@
             line-height: 1.5;
         }
     
-        /* .video-container {
-            box-sizing: border-box; 
-            margin: 0 auto; 
-            position: relative; 
-            max-width: 90%; 
-            padding: 0 0; 
-            overflow: hidden; 
-            display: flex;
-        } */
          /* 修改视频的样式 */
         .video-container video {
             width: 100%;  
@@ -266,8 +257,23 @@
         .left-adjust {
             margin-left: 250px; /* 负值让文字向左移动，调整数值达到理想效果 */
         }   
+        .centered-text {
+    color: rgb(40, 39, 39); /* 设置文字颜色 */
+    font-size: 16px; /* 调整字体大小 */
+    text-align: center; /* 确保文字居中 */
+    z-index: 10; /* 确保文字显示在视频上方 */
+    pointer-events: none; /* 使文字不会影响视频控件的操作 */
+    margin: 0; /* 去除默认的外边距 */
+        }
 
-
+.video {
+    display: flex;
+    justify-content: center; /* 水平居中对齐 */
+    align-items: center; /* 垂直居中对齐 */
+    flex-direction: column; /* 垂直排列文字和视频 */
+    position: relative; /* 为内部布局设置相对定位 */
+    gap: 5px; /* 控制文字与视频之间的间距 */
+}
 
     </style>
     <style type="text/css">
@@ -346,8 +352,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <!-- <p>"Unsimilar"</p> -->
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\24_BpPv3uUld24_01_0_1200_slice53.mp4" type="video/mp4">
                         </video>
@@ -355,7 +361,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <!-- <p class="left-adjust">"Unsimilar"</p> -->
+                        <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\25_9GgtL-BL-GE_03_691_1710_slice4.mp4" type="video/mp4">
                         </video>
@@ -363,7 +370,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="3" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <!-- <p class="left-adjust">"Unsimilar"</p> -->
+                        <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\2\15_0oOe8Qjieps_02_0_1290_slice71.mp4" type="video/mp4">
                         </video>
@@ -378,7 +386,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\24_JxONoMvqUpQ_05_0_1494_slice22.mp4" type="video/mp4">
                         </video>
@@ -386,7 +395,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <!-- <p class="left-adjust">"Unsimilar"</p> -->
+                        <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\16_lhgto3xo2c8_04_0_1260_slice29.mp4" type="video/mp4">
                         </video>
@@ -394,7 +404,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\3\1_5k-J9PavRI0_03_0_1860_slice111.mp4" type="video/mp4">
                         </video>
@@ -409,7 +420,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\2_0oOe8Qjieps_02_0_1290_slice69_1.mp4" type="video/mp4">
                         </video>
@@ -417,7 +429,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <!-- <p class="left-adjust">"Unsimilar"</p> -->
+                        <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\7_8QvKh-jvI1I_09_0_1290_slice19.mp4" type="video/mp4">
                         </video>
@@ -425,7 +438,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\4\10_2YMv8SB0pXY_03_0_950_slice43.mp4" type="video/mp4">
                         </video>
@@ -440,7 +454,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\3_CQhwdeOcwMI_03_0_606_slice25.mp4" type="video/mp4">
                         </video>
@@ -448,7 +463,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\20_KNqdxdAOLo0_03_0_1770_slice1_1.mp4" type="video/mp4">
                         </video>
@@ -456,7 +472,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">                       
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\5\26_uitvYa5NsJI_18_0_1950_slice8.mp4" type="video/mp4">
                         </video>
@@ -472,7 +489,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\1_5Y5L3FXkHVM_02_0_1290_slice35.mp4" type="video/mp4">
                         </video>
@@ -480,7 +498,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\25_2R8f-0RErCI_03_434_1230_slice16.mp4" type="video/mp4">
                         </video>
@@ -488,7 +507,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="2" data-cloned="true">                       
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\infinit\7_Gb-y_rl1b4k_02_706_1200_slice11.mp4" type="video/mp4">
                         </video>
@@ -505,7 +525,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\swap_similar\similar.mkv" type="video/mp4">
                         </video>
@@ -513,7 +534,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Swap"</p>
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\swap_similar\swap.mkv" type="video/mp4">
                         </video>
@@ -525,7 +547,8 @@
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Similar"</p>
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\unsimilar_similar\similar.mkv" type="video/mp4">
                         </video>
@@ -533,7 +556,8 @@
                 </div>
                 <div class="slider-item" data-slider-index="1" data-cloned="true">
                     <div class="video">
-                        <p class="left-adjust">"Unsimilar"</p>
+                        <!-- <p class="left-adjust">"Unsimilar"</p> -->
+                        <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
                             <source src="resource\unsimilar_similar\unsimilar.mkv" type="video/mp4">
                         </video>
