--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
 
 <body>
     <header>
-        <h1>InterGDance: Music-Driven Interaction-Controllable Group Choreography <br> 
-            in a Number-Free Paradigm </h1>
+        <h1>InterGDance: Music-Driven Interaction-Controllable Group Choreography</h1>
         <br>
         <div id="author-list">
             <a>Anonymous submission</a>&nbsp;&nbsp;&nbsp;
