--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
         </p>
     </section>
 
-    <section>
+    <!-- <section>
+        <h2>InterGDance Paradigm</h2>
         <div class="video-container" style="text-align: center;">
             <div class="video" style="width: 60%; margin: 0 auto;">
                 <video autoplay loop muted controls>
@@ -338,7 +339,7 @@
                 </video>
             </div>   
         </div>
-    </section>
+    </section> -->
 
     <section>
         <h2>Generation Results</h2>
@@ -514,8 +515,9 @@
         </div>
     </section>
 
+
     <section>
-        <h2>Label Control</h2>
+        <h2>Same Music Different Prior</h2>
         <div class="video-container">
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
@@ -523,7 +525,7 @@
                         <!-- <p class="left-adjust">"Similar"</p> -->
                         <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
-                            <source src="resource\swap_similar\similar.mkv" type="video/mp4">
+                            <source src="resource\swap_similar\similar.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -532,7 +534,7 @@
                         <!-- <p class="left-adjust">"Swap"</p> -->
                         <p class="centered-text">"Swap"</p>
                         <video autoplay loop muted controls>
-                            <source src="resource\swap_similar\swap.mkv" type="video/mp4">
+                            <source src="resource\swap_similar\swap.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -545,7 +547,7 @@
                         <!-- <p class="left-adjust">"Similar"</p> -->
                         <p class="centered-text">"Similar"</p>
                         <video autoplay loop muted controls>
-                            <source src="resource\unsimilar_similar\similar.mkv" type="video/mp4">
+                            <source src="resource\unsimilar_similar\similar.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -554,42 +556,82 @@
                         <!-- <p class="left-adjust">"Unsimilar"</p> -->
                         <p class="centered-text">"Unsimilar"</p>
                         <video autoplay loop muted controls>
-                            <source src="resource\unsimilar_similar\Unsimilar.mkv" type="video/mp4">
+                            <source src="resource\unsimilar_similar\unsimilar.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
-    
-
     </section>
 
     <section>
         <h2>Long-term Generation</h2>
-        <div class="video-container" style="text-align: center;">
-            <div class="video" style="width: 30%; margin: 0 auto;">
-                <video autoplay loop muted controls>
-                    <source src="resource\InterGDance_LONG.mp4" type="video/mp4">
-                </video>
-            </div>   
+        <div class="video-container">
+            <div class="slider-container">
+                <div class="slider-item" data-slider-index="0" data-cloned="true">
+                    <div class="video">
+                        <!-- <p class="left-adjust">"Similar"</p> -->
+                        <!-- <p class="centered-text">"Similar"</p> -->
+                        <video autoplay loop muted controls>
+                            <source src="resource\long\long2.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="1" data-cloned="true">
+                    <div class="video">
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <!-- <p class="centered-text">"Swap"</p> -->
+                        <video autoplay loop muted controls>
+                            <source src="resource\long\long1.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="slider-item" data-slider-index="2" data-cloned="true">                       
+                    <div class="video">
+                        <!-- <p class="left-adjust">"Swap"</p> -->
+                        <!-- <p class="centered-text">"Swap"</p> -->
+                        <video autoplay loop muted controls>
+                            <source src="resource\long\long.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
+
     <section>
-        <h2>Framework</h2>
-        <div class="image-container">
+        <h2>Comparism with Baselines</h2>
+        <h2></h2>
+        <div class="video-container" style="text-align: center;">
+            <div class="video" style="width: 60%; margin: 0 auto;">
+                <video autoplay loop muted controls>
+                    <source src="resource\compare.mp4" type="video/mp4">
+                </video>
+            </div>   
+        </div>
+        <!-- <h4>Ablation Study: Transformer vs. Ours</h4>
+        <div class="video-container" style="text-align: center;">
+            <div class="video" style="width: 60%; margin: 0 auto;">
+                <video autoplay loop muted controls>
+                    <source src="resource\mambavstrans.mp4" type="video/mp4">
+                </video>
+            </div>   
+        </div> -->
+    </section>
+
+    <section>
+        <h2>Method</h2>
+        <!-- <div class="image-container">
             <img src="pipline.png" alt="Image 2">
             <p>
                 Overview of our InterGDance pipeline. Initially, our rule-based classification method splits the dataset by interaction patterns and assigns corresponding labels. Subsequently, InterGDance uses these labels for controllable interaction generation. 
             <p>
-        </div>
-    </section>
-
-    <section>
-        <h2>Demo</h2>
+        </div> -->
         <div class="video-container" style="text-align: center;">
             <div class="video" style="width: 60%; margin: 0 auto;">
                 <video autoplay loop muted controls>
-                    <source src="resource\freecompress-InterGDance.mp4" type="video/mp4">
+                    <source src="resource\method.mp4" type="video/mp4">
                 </video>
             </div>   
         </div>
