--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
 
     <section>
-        <h2>Same Music Different Prior</h2>
+        <h2>Same Music Different Priors</h2>
         <div class="video-container">
             <div class="slider-container">
                 <div class="slider-item" data-slider-index="0" data-cloned="true">
