--- a/index.html
+++ b/index.html
@@ -342,6 +342,16 @@
     </section> -->
 
     <section>
+        <div class="video-container" style="text-align: center;">
+            <div class="video" style="width: 60%; margin: 0 auto;">
+                <video autoplay loop muted controls>
+                    <source src="resource\scalable.mp4" type="video/mp4">
+                </video>
+            </div>   
+        </div>
+    </section>
+
+    <section>
         <h2>Generation Results</h2>
         <h4><span style="color: rgb(84, 84, 247);">2</span>-Dancers</span></h4>
         <div class="video-container">
