--- a/index.html
+++ b/index.html
@@ -563,27 +563,9 @@
             </div>
     </section>
 
-    <section>
-        <h2>Long-term Generation</h2>
-        <div class="video-container">
-            <div class="slider-container">
-                <div class="slider-item" data-slider-index="2" data-cloned="true">                       
-                    <div class="video">
-                        <!-- <p class="left-adjust">"Swap"</p> -->
-                        <!-- <p class="centered-text">"Swap"</p> -->
-                        <video autoplay loop muted controls>
-                            <source src="resource\long\long.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
 
     <section>
-        <h2>Comparism with Baselines</h2>
+        <h2>Long-term Generation Comparism</h2>
         <h2></h2>
         <div class="video-container" style="text-align: center;">
             <div class="video" style="width: 60%; margin: 0 auto;">
