--- a/index.html
+++ b/index.html
@@ -342,6 +342,20 @@
     </section> -->
 
     <section>
+        <h2>Motivation</h2>
+        <div class="video-container" style="text-align: center;">
+            <div class="video" style="width: 60%; margin: 0 auto;">
+                <video autoplay loop muted controls>
+                    <source src="resource\motivation.mp4" type="video/mp4">
+                </video>
+            </div>   
+        </div>
+        <p style="font-size: 12px; color: gray; text-align: center;">
+            **Source from: <a href="https://www.youtube.com/watch?v=U9giZo0GBls" style="color: gray;">https://www.youtube.com/watch?v=U9giZo0GBls</a>
+          </p>
+    </section>
+
+    <section>
         <h2>Generation Results</h2>
         <h4><span style="color: rgb(84, 84, 247);">2</span>-Dancers</span></h4>
         <div class="video-container">
